# Sistema-VoIP

./: .env-example  .gitignore  README.md  main.js  main.py  package-lock.json  package.json  pyproject.toml  vite.config.js
asterisk/: extensions.conf  generate_keys.sh  manager.conf  pjsip.conf  rtp.conf  sip.conf
asterisk/scripts/: call_handler.py
backend/: db.sqlite3  repomix-output.xml
backend/ramais/: admin.py  models.py  serializers.py  views.py
backend/ramais/migrations/: 0001_initial.py
backend/ramais/templates/ramais/: index.html
backend/static/: jssip.min.js  voip.js  voip.mjs
backend/voip/: asgi.py  settings.py  urls.py  wsgi.py
backend/webphone/: views.py
backend/webphone/templates/webphone/: index.html
