[project]
name = "sistema-voip"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asterisk-ami>=0.1.7",
    "django>=6.0.3",
    "django-cors-headers>=4.9.0",
    "django-extensions>=4.1",
    "django-sslserver>=0.22",
    "djangorestframework>=3.16.1",
    "mysqlclient>=2.2.8",
    "pyopenssl>=26.0.0",
    "python-dotenv>=1.2.2",
    "werkzeug>=3.1.7",
]
